# Customized-Feed-Algorithm

./: Accounts.cpp  Accounts.h  Admins.cpp  Article.cpp  Article.h  ArticleUtils.h  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  Date.cpp  Date.h  MaxHeap.cpp  MaxHeap.h  README.md  Users.cpp  adminform.cpp  adminform.h  adminform.ui  customSingleLinkedList.h  customVector.h  functionalities.cpp  functionalities.h  identifier.sqlite  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  singleLinkedList.cpp  singleLinkedList.h  userform.cpp  userform.h  userform.ui
GUI_QT6/: CMakeLists.txt  adminform.cpp  adminform.h  adminform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rsrcs.qrc  userform.cpp  userform.h  userform.ui
GuI_QT6/: CMakeLists.txt  adminform.cpp  adminform.h  adminform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  post.cpp  post.h  post.ui  user.ui  userform.cpp  userform.h  userform.ui
GuI_QT6/Release/: admins.json  articles.json  users.json
